--- a/css/style.css
+++ b/css/style.css
@@ -4,20 +4,27 @@
     box-sizing: border-box;
 }
 body{
-    font-family: 'Roboto', sans-serif;;
+    font-family: 'Roboto', sans-serif;
+}
+
+.greycolor{
+    opacity: 0.5;
+    padding: 10px 0;
 }
 /* navbar section start here */
 .navbar-section{
-    border: 2px solid black;
+    /* border: 2px solid black; */
      background-color: #2874f0;
      display: flex;
      justify-content: center;
      font-family: 'Roboto', sans-serif;
-     /* padding: 0 10px; */
+     position: fixed;
+     width: 100%;
+     top:0;
 }
 .navbar-head{
     /* border: 2px solid red; */
-    padding: 10px 10px;
+    padding: 10px 0;
    
 }
 .navbar-head img{
@@ -41,7 +48,7 @@ body{
 .navbar-head span img{
     width: 10px;
 }
-.search-icon-div {
+.search-bar {
     margin: 10px;
     border-radius: 2px;
     background-color: white;
@@ -50,15 +57,17 @@ body{
     display: flex;
     justify-content: space-between;
 }
-.search-icon-div input{
+.search-bar input{
     width: 100%;
     padding: 0 10px;
     outline: none;
+    border-style: hidden;
+    border-radius: 2px;
 }
-
-
-
-
+.search-bar-icon-div{
+    padding:10px;
+    color: #2874f0;
+}
 
 .navbar-section p{
     padding: 0px 0px;
@@ -95,13 +104,14 @@ body{
 
 /* slider section start here */
 .category-section{
-    border: 2px solid black;
+    /* border: 2px solid black; */
     display: flex;
     justify-content: space-evenly;
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     font-weight: 500;
     padding: 10px 70px;
+    margin-top: 60px;
 
 }
 .category-head{
@@ -112,15 +122,45 @@ body{
     width: 75px;
 }
 /* slider image start here */
-.slider-image{
-    /* border: 2px solid black; */
+.slider-container{
     width: 100%;
     height: 280px;
     padding: 15px 0;
+    position: relative;
 }
-.slider-image img{
+.slider-container img{
     width: 100%;
+    padding: 0 10px;
+    position: relative;
 }
+
+.slider-left-button{
+    left:0;
+    position: absolute ;
+    z-index: 9 ;
+    top : 35%;
+    padding: 0 10px;
+}
+.slider-left-button button{
+    padding: 35px 15px;
+    border-style: hidden;
+    font-size: 30px;
+    
+}
+.slider-right-button{
+    right: 0;
+    position: absolute;
+    z-index: 9;
+    top : 35%; 
+    padding: 0 10px;
+}
+.slider-right-button button{
+    padding: 35px 15px;
+    border-style: hidden;
+    font-size: 30px;
+    
+}
+
 /* slider image end here */
 
 /* electronic section start here */
@@ -128,10 +168,30 @@ body{
     border: 2px solid black;
     display: flex;
     margin: 10px 0;
+    padding: 0 10px;
+    position: relative;
     
 }
 .electronic-head-left{
-    border: 2px solid red;
+    background-image: url(https://rukminim1.flixcart.com/fk-p-flap/278/278/image/7593e7b6640822c1.jpg?q=90);
+    background-position: 0px bottom;
+    background-repeat: no-repeat;
+    width: 230px;
+    position: relative;
+}
+.electronic-head-left-content {
+    text-align: center;
+    height: 100%;
+    padding: 28px 10px 124px;
+    font-size: 40px;
+    font-weight: 300;
+}
+.electronic-head-left-content button{
+    padding: 10px 15px;
+    background-color: #2874f0;
+    color: #fff;
+    border-style: hidden;
+    cursor: pointer;
 }
 .electronic-head-right{
     border: 2px solid green;
@@ -141,6 +201,7 @@ body{
     font-size: 14px;
     font-weight: 500;
     cursor: pointer;
+    position: relative;
 
 }
 .electronic-head-right img{
@@ -154,6 +215,21 @@ body{
     border: 2px solid blue;
     align-items: center;
 }
+.electronic-right-button{
+    position: absolute;
+    z-index: 5;
+    right: 0;
+    top: 30%;
+    padding: 0 10px;
+    
+}
+.electronic-right-button button{
+    padding: 35px 15px;
+    border-style: hidden;
+    font-size: 30px;
+    cursor: pointer;
+    /* background-color: #fff; */
+}
 /* electronic section End here */
 
 /* Beauty section start here */
@@ -161,10 +237,33 @@ body{
     border: 2px solid black;
     display: flex;
     margin: 10px 0;
+    padding: 0 10px;
+    position: relative;
 
 }
 .beauty-head-left{
     border: 2px solid red;
+    background-image: url(https://rukminim1.flixcart.com/fk-p-flap/278/278/image/b84f1c22cce1a6a3.jpg?q=90);
+    background-position: 0px bottom;
+    background-repeat: no-repeat;
+    width: 230px;
+    position: relative;
+    /* padding: 0 10px; */
+
+}
+.beauty-head-left-content {
+    text-align: center;
+    height: 100%;
+    padding: 28px 10px 124px;
+    font-size: 30px;
+    font-weight: 300;
+}
+.beauty-head-left-content button{
+    padding: 10px 15px;
+    background-color: #2874f0;
+    color: #fff;
+    border-style: hidden;
+    cursor: pointer;
 }
 .beauty-head-right{
     border: 2px solid green;
@@ -174,6 +273,7 @@ body{
     font-size: 14px;
     font-weight: 500;
     cursor: pointer;
+    position: relative;
 
 }
 .beauty-head-right img{
@@ -184,6 +284,20 @@ body{
     border: 2px solid blue;
     align-items: center;
 }
+.beauty-right-button{
+    position: absolute;
+    z-index: 5;
+    right: 0;
+    top: 30%;
+    padding: 0 10px;
+    
+}
+.beauty-right-button button{
+    padding: 35px 15px;
+    border-style: hidden;
+    font-size: 30px;
+    cursor: pointer;
+}
 /* Beauty section End here */
 
 /* summer section start here */
@@ -191,19 +305,38 @@ body{
     border: 2px solid black;
     display: flex;
     margin: 10px 0;
+    padding: 0 10px;
+    position: relative;
 
 }
 .summer-head-left{
+    width: 230px;
+    position: relative;
+}
+.summer-head-left-content{
     border: 2px solid red;
+    text-align: center;
+    height: 100%;
+    padding: 28px 10px 124px;
+    font-size: 30px;
+    font-weight: 300;
+}
+.summer-head-left-content button{
+    padding: 10px 15px;
+    background-color: #2874f0;
+    color: #fff;
+    border-style: hidden;
+    cursor: pointer;
 }
 .summer-head-right{
-    border: 2px solid green;
+    /* border: 2px solid green; */
     display: flex;
     padding: 25px 15px;
     text-align: center;
     font-size: 14px;
     font-weight: 500;
     cursor: pointer;
+    position: relative;
 
 }
 .summer-head-right img{
@@ -216,6 +349,20 @@ body{
     border: 2px solid blue;
     align-items: center;
 }
+.summer-right-button{
+    position: absolute;
+    z-index: 5;
+    right: 0;
+    top: 30%;
+    padding: 0 10px;
+    
+}
+.summer-right-button button{
+    padding: 35px 15px;
+    border-style: hidden;
+    font-size: 30px;
+    cursor: pointer;
+}
 
 /* summer section End  here */
 
@@ -224,9 +371,31 @@ body{
     border: 2px solid black;
     display: flex;
     margin: 10px 0;
+    padding: 0 10px;
+    position: relative;
 }
 .sport-head-left{
     border: 2px solid red;
+    background-image: url(https://rukminim1.flixcart.com/fk-p-flap/278/278/image/b84f1c22cce1a6a3.jpg?q=90);
+    background-position: 0px bottom;
+    background-repeat: no-repeat;
+    width: 230px;
+    padding: 0 30px;
+    position: relative;
+}
+.sport-head-left-content{
+    text-align: center;
+    height: 100%;
+    padding: 28px 10px 124px;
+    font-size: 30px;
+    font-weight: 300;
+}
+.sport-head-left-content button{
+    padding: 10px 15px;
+    background-color: #2874f0;
+    color: #fff;
+    border-style: hidden;
+    cursor: pointer;
 }
 .sport-head-right{
     border: 2px solid green;
@@ -235,6 +404,7 @@ body{
     text-align: center;
     font-size: 14px;
     font-weight: 500;
+    position: relative;
 }
 
 
@@ -245,7 +415,29 @@ body{
 .sport-head-content{
     border: 2px solid blue;
     align-items: center;
+
+}
+.sport-right-button{
+    position: absolute;
+    z-index: 5;
+    right: 0;
+    top: 30%;
+    padding: 0 10px;
+    
+}
+.sport-right-button button{
+    padding: 35px 15px;
+    border-style: hidden;
+    font-size: 30px;
+    cursor: pointer;
 }
 /* sport section End here */
 
 
+.content-section{
+    padding: 0 10px;
+}
+
+.content-head-section{
+    padding: 10px 0;
+}
